[gd_scene load_steps=3 format=3 uid="uid://cq0i6nnhamlmb"]

[ext_resource type="Script" uid="uid://cmnm36hp1bx3l" path="res://scripts/random_button_clicker.gd" id="1_b060s"]
[ext_resource type="Texture2D" uid="uid://bg0p4cryqehhp" path="res://assets/asset.png" id="2_b060s"]

[node name="RandomButtonClicker" type="Node"]
script = ExtResource("1_b060s")

[node name="ChangePosition_Timer" type="Timer" parent="."]

[node name="ClickMe" type="TextureButton" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2_b060s")

[node name="Score_Number" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Score = 0"

[connection signal="timeout" from="ChangePosition_Timer" to="." method="changepos"]
[connection signal="pressed" from="ClickMe" to="." method="_add_score"]
